# diffpy.utils

./: .buildinfo  .codecov.yml  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  AUTHORS.txt  CHANGELOG.md  CHANGELOG.rst  LICENSE.rst  LICENSE.txt  LICENSE_DANSE.txt  MANIFEST.in  README.md  README.rst  README.txt  cookiecutter.json  environment.yml  genindex.html  index.html  install.html  license.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  release.html  rever.xsh  run_tests.py  search.html  searchindex.js  setup.py  setup.py~
_modules/: index.html
_sources/: index.rst.txt  index.txt
_static/: documentation_options.js
api/: diffpy.html  diffpy.utils.html  diffpy.utils.parsers.html  diffpy.utils.scattering_objects.html  diffpy.utils.tests.html  diffpy.utils.wx.html  modules.html
conda-recipe/: bld.bat  meta.yaml  run_test.py
devutils/: makesdist  makesdist~
diffpy/: __init__.py
doc/: Makefile
examples/: diffraction_objects_example.html  examples.html  mu_calc_examples.html  parsers_example.html  parsersexample.html  resample_example.html  resampleexample.html  tools_example.html  toolsexample.html  transforms_example.html
news/: DO-docstring.rst  TEMPLATE.rst  add-operations-tests.rst  add_wx_import.rst  api-docs370.rst  array_index.rst  build-doc-automatic.rst  capture-user.rst  central-ci.rst  changelog-3.6.0-line-break.rst  class-docstring.rst  compute-density.rst  config-UX.rst  config.rst  configupdate.rst  constructor.rst  cookie.rst  d-q.rst  d-tth.rst  deepcopy.rst  dep-msg-helper.rst  depr-tests.rst  deprecate.rst  deprecator.rst  doc-update.rst  doccln.rst  docformatter.rst  doclink.rst  docs-add-data.rst  docs-do.rst  docs-fix.rst  docs_patch.rst  docstring-fix.rst  ds-bug.rst  (+81 more)
(+216 files in other folders)
